bpo-13601: always use line-buffering for sys.stderr (GH-17646)